gh-pages-install

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "security-map",
   "version": "0.1.0",
+  "homepage": "https://SidneyBasa.github.io/team12_project3_security_map",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "azure-maps-control": "^2.2.3",
     "dotenv": "^16.0.3",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-azure-maps": "^0.4.4",
     "react-dom": "^18.2.0",
@@ -16,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
